site/docs/v0.1.0/zh/components/app-shell.mdx
# App Shell 应用外壳

App Shell 提供持久导航区域与边界明确的产品工作区，是 A3S Office、网关运维和智能体控制台的顶层框架。

<Preview>
<div class="app-shell" data-navigation="expanded" style="--app-shell-min-height:30rem;--app-shell-navigation-size:13rem">
  <aside data-app-navigation>
    <div class="activity-bar" aria-label="演示工作区">
<header><span class="grid size-7 place-items-center rounded-lg bg-[var(--a3s-blue)] font-semibold text-white">A</span><span data-navigation-label>A3S UI</span></header>
      <nav aria-label="Demo"><ul><li><a href="#shell-home" aria-current="page"><span aria-hidden="true">◫</span><span data-navigation-label>Workspace</span></a></li><li><a href="#shell-components"><span aria-hidden="true">◇</span><span data-navigation-label>Components</span></a></li><li><a href="#shell-settings"><span aria-hidden="true">⚙</span><span data-navigation-label>Settings</span></a></li></ul></nav>
<footer><span class="size-2 rounded-full bg-[var(--a3s-green)]"></span><span data-navigation-label>所有系统就绪</span></footer>
    </div>
  </aside>
  <main data-app-main>
<header class="workspace-header"><div data-workspace-leading><button type="button" class="btn" data-size="icon-sm" data-variant="ghost" data-demo-shell-toggle aria-label="折叠导航" aria-expanded="true">☰</button></div><div data-workspace-identity><h1>设计系统工作区</h1><span>应用组成预览</span></div><div data-workspace-actions><button type="button" class="btn" data-size="sm">发布</button></div></header>
    <div data-app-content class="grid content-start gap-4 p-5">
<div><span class="badge">实时模式</span><h2 class="mt-2 text-xl font-semibold">使用稳定组件组合产品界面。</h2><p class="mt-1 max-w-xl text-sm text-muted-foreground">调整视口大小或折叠导航，内容区域仍保持有界且可滚动。</p></div>
      <div class="resource-grid" style="--resource-grid-min:10rem"><article class="resource-card" data-kind="agent"><figure class="text-2xl">◇</figure><section><strong>Agent session</strong><small>Active · 2 tools</small></section></article><article class="resource-card"><figure class="text-2xl">▤</figure><section><strong>Configuration</strong><small>Validated · ACL</small></section></article></div>
    </div>
  </main>
</div>
</Preview>

## 用途

```html
<div class="app-shell" data-navigation="expanded">
  <aside data-app-navigation>...</aside>
  <main data-app-main>
    <header class="workspace-header">...</header>
    <div data-app-content>...</div>
  </main>
</div>
```

### 参数

| 参数 | 可选值 | 默认 | 目的 |
| --- | --- | --- | --- |
| `data-navigation` | `expanded`、`collapsed`、`hidden` | `expanded` | 桌面导航状态 |
| `data-mobile-navigation` | `open` 或省略 | 省略 | 移动端抽屉是否可见 |
| `--app-shell-navigation-size` | CSS 长度 | `15rem` | 展开后的导航宽度 |
| `--app-shell-navigation-collapsed-size` | CSS 长度 | `4rem` | 图标栏宽度 |
| `--app-shell-min-height` | CSS 长度 | `36rem` | 外壳最小高度 |

## 状态和变体

App Shell 支持展开、折叠、隐藏与移动端打开状态。状态管理由宿主应用负责，以便保存用户偏好并与路由协调；预览只使用文档专用的轻量控制器。

## 可访问性

使用地标元素（`aside`、`nav`、`main`、`header`）并命名每个导航区域。导航开关需要 `aria-expanded` 与随状态变化的可访问名称。移动导航为模态时，应组合 [Drawer](/components/drawer) 来管理焦点。

## React

```tsx
export function AppShellExample() {
  return (
    <div className="app-shell" data-navigation="expanded">
      <aside data-app-navigation="">
        <nav aria-label="工作区">
          <a href="/tasks" aria-current="page">
            任务
          </a>
        </nav>
      </aside>
      <main data-app-main="">
        <header className="workspace-header">
          <section aria-labelledby="workspace-title">
            <h1 id="workspace-title">设计系统工作区</h1>
            <p>检查当前任务和文件。</p>
          </section>
        </header>
        <div data-app-content="">
          <span>已就绪</span>
        </div>
      </main>
    </div>
  );
}
```

该发布版本尚未提供框架适配器；示例直接渲染同一语义 DOM，并由该版本的浏览器运行时增强交互。

## Vue

```vue
<template>
  <div class="app-shell" data-navigation="expanded">
    <aside data-app-navigation="">
      <nav aria-label="工作区">
        <a href="/tasks" aria-current="page">任务</a>
      </nav>
    </aside>
    <main data-app-main="">
      <header class="workspace-header">
        <section aria-labelledby="workspace-title">
          <h1 id="workspace-title">设计系统工作区</h1>
          <p>检查当前任务和文件。</p>
        </section>
      </header>
      <div data-app-content=""><span>已就绪</span></div>
    </main>
  </div>
</template>
```

该发布版本尚未提供框架适配器；示例直接渲染同一语义 DOM，并由该版本的浏览器运行时增强交互。
